@@ -724,3 +724,7 @@ Rewrote string formatting as f-strings in latex_manager.py
 
 *****
 
+Rewrote string formatting as f-strings in config_manager.py
+
+*****
+
